# pgd

./: .gitignore  README.md  generation_utils_copy.py  image_test_2_oszkar_copy_2.py  launch.json  pyproject.toml
configs/: default.yaml
depracated_code/: fornavigation_image_test.py  generation_utils.py  image.py  image_test.py  image_test_2.py  image_test_2_oszkar_copy.py  inferenceafterpgd.py
images/boat/reasoning/: log_files.txt
presentation/boats/: config.json  log_files.txt
presentation/boats/task/: 241.json  alt.txt  launch.json
presentation/cars/: config.json  log_files.txt  render_74.html
presentation/cars/task/: 74.json  alt.txt  launch.json
presentation/home/: config.json  log_files.txt
presentation/home/task/: 242.json  alt.txt  launch.json
scripts/: run_attack.py
src/pgd_attack/: __init__.py  attack.py  cli.py  config.py  generate.py  io.py  losses.py  models.py  preprocess.py
